# west_buget_it

./: .env.prod.example  .env.production  .gitignore  .pre-commit-config.yaml  APPLY_FIX_NOW.md  AUTH_SETUP.md  CHANGELOG_FTP_UPDATE.md  CHANGES.md  CLAUDE.md  CLEANUP_REPORT.md  CODEX.md  COOLIFY_DEPLOYMENT.md  COOLIFY_DEPLOY_FIX.md  CRUD_PLAN.md  DEPARTMENT_FILTER_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_REPORT.md  Dockerfile.backend.prod  FINAL_FIX_STEPS.md  FIX_503_ERROR.md  FIX_LOGIN_PREFLIGHT_503.md  FIX_NOW.txt  FIX_TRAEFIK_CORS.md  GITHUB_ACTIONS_SETUP.md  HARDCODED_VALUES_FIX_SUMMARY.md  HARDCODED_VALUES_REPORT.md  MIGRATION_GUIDE.md  MIGRATION_REPORT.md  MODULE_SETTINGS_SETUP.md  OCR_FIX_README.txt  PROJECT_SUMMARY.md  QUICK_FIX_COOLIFY.md  QUICK_FIX_PROD.md  README.md  ROADMAP.md  SECURITY_AUDIT_ANALYTICS_REPORT.md  SECURITY_AUDIT_INDEX.md  SECURITY_AUDIT_PROGRESS.md  (+40 more)
backend/: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .pylintrc  BACKEND_STARTUP_FIX_SUMMARY.md  CONFIGURATION_REFACTORING_COMPLETE.md  Dockerfile  Dockerfile.prod  Dockerfile.prod.optimized  Makefile  alembic.ini  change_admin_password.py  create_admin.py  cron_ftp_import.py  crontab  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_finance_password.py  run_scheduler.py  test_1c_direct.py  test_1c_minimal.py  test_with_fix.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_23_1217-21c6cd6d2f8b_initial_migration.py  2025_10_23_1500-add_parent_id_and_status.py  2025_10_24_0720-98735387a296_update_budget_status_enum_to_english.py  2025_10_24_1318-7e7d9de8ea57_add_import_tracking_fields_to_expenses.py  2025_10_24_1326-e599fa6bdcf2_add_forecast_expenses_table.py  2025_10_24_1600-a1b2c3d4e5f6_add_attachments_table.py  2025_10_24_1630-add_expense_attachments_table.py  2025_10_24_1700-add_employees_and_payroll_tables.py  2025_10_24_1700-b2c3d4e5f6a7_add_dashboard_configs_table.py  2025_10_24_1730-add_budget_scenarios_tables.py  2025_10_25_0000-c3d4e5f6a7b8_add_users_table.py  2025_10_25_1200-d4e5f6a7b8c9_add_departments_multi_tenancy.py  2025_10_25_1400-f7g8h9i0j1k2_add_performance_indexes.py  2025_10_25_1600-a9b8c7d6e5f4_add_audit_logs_table.py  2025_10_25_1712-eb520a6d5cae_add_ftp_subdivision_name_to_departments.py  2025_10_25_1800-b1c2d3e4f5a6_add_payroll_tables.py  2025_10_26_0903-39fcb0613cd9_make_expense_category_id_nullable.py  2025_10_26_0957-bc18a99256b3_add_department_id_to_forecast_expenses.py  2025_10_26_1924-8c0d9570cd45_add_budget_planning_2026_tables.py  2025_10_27_1200-69c1c52fa5c5_add_bonus_types_to_payroll.py  2025_10_27_1200-a1b2c3d4e5f6_add_bonus_types_to_payroll.py  2025_10_27_1400-b2c3d4e5f6a7_add_kpi_system_tables.py  2025_10_27_1400-dc3a59754bb0_add_kpi_system_tables.py  2025_10_28_1010-add_submitted_to_approvalactionenum.py  2025_10_28_1100-add_is_baseline_to_budget_versions.py  2025_10_28_2107-5c5af3ac5381_merge_budget_and_payroll_branches.py  2025_10_28_2107-ac976a594e2f_add_income_tax_fields_to_payroll_actuals.py  2025_10_29_1119-93e38b6e59d4_add_is_baseline_field_to_budget_versions.py  2025_10_29_1450-e9840a394414_make_organizations_shared_remove_.py  2025_10_29_1800-add_custom_approval_checkboxes.py  2025_10_31_0000-9a1b2c3d4e5f_add_revenue_budget_module_tables.py  2025_10_31_1700-merge_revenue_and_organizations.py  2025_11_04_2113-add_api_tokens_table.py  2025_11_05_1656-feb0bf4080a5_add_processed_invoices_table_for_ai_.py  2025_11_05_2200-add_1c_fields_to_processed_invoices.py  2025_11_05_2230-add_category_to_processed_invoices.py  (+37 more)
backend/app/: main.py
backend/backups/: db_export_20251029_104000.sql
backend/import_configs/: budget_categories.json  budget_plan_details.json  employees.json  organizations.json  revenue_plan_details.json
backend/scripts/: CLEAN_CREDIT_DATA_README.md  CREDIT_PORTFOLIO_MIGRATION.md  DB_MIGRATION.md  IMPORT_BUDGET_README.md  PROD_SERVER_INSTRUCTIONS.md  add_customer_revenue_category.py  add_customer_supplier_categories.py  add_enhanced_categories.py  add_test_data.py  analyze_1c_categories.py  analyze_dds_excel.py  analyze_expense_structure.py  analyze_forecast_template.py  analyze_warehouse_files.py  check_1c_catalogs.py  check_1c_data_availability.py  check_1c_vat_enum.py  check_all_1c_categories.py  check_bank_account_format.py  check_bank_from_existing.py  check_categories_api.py  check_categories_in_db.py  check_duplicates_prod.sh  check_external_ids.py  check_forecast_department.py  check_november_1c.py  check_november_data.py  check_november_direct.py  check_working_request.py  classify_cash_transactions.py  classify_november_transactions.py  clean_credit_data.py  cleanup_old_data.py  cleanup_old_data_auto.py  compare_requests.py  convert_warehouse_budget.py  create_2024_payroll_data.py  create_baseline_2025.py  create_test_invoice.py  cron_daily_1c_sync.sh  (+75 more)
backend/templates/: template_categories.xlsx  template_contractors.xlsx  template_kpi.xlsx  template_organizations.xlsx  template_payroll_plans.xlsx
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_auth_utils.py  test_baseline_bus.py  test_cache_service.py  test_kpi_calculations.py  test_modules.py  test_multi_tenancy_security.py  test_payroll_calculations.py  test_rate_limit_middleware.py  test_security_headers.py
backend/xls/: Planning_Template_10.2025-3.xlsx  Zayavki na raszkhod(spisok) XLSX.xlsx  plan.md  Бюджет ЗП склад 2025_3.xlsx  Бюджет по расходам склада 2025г..xls  Бюджет по статьям Отдел IT 2025 (1).xls-4.xlsx  Бюджет_склад_расходы_2025_готово.xlsx  ИНСТРУКЦИЯ_ИМПОРТ_СКЛАД.md  Планирование_10.2025-3.xlsx  Планфакт2025.xlsx  Пример_Импорт_Сотрудников.xlsx
(+658 files in other folders)
